--- a/languages/ShouldIGo32Or64Bit.pt.po
+++ b/languages/ShouldIGo32Or64Bit.pt.po
@@ -9,65 +9,75 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
-"X-Generator: Poedit 1.8.5\n"
+"X-Generator: Poedit 1.8.6\n"
 
-#: computerinfo.advicedefault
+#: localization.advicedefault
+msgctxt "localization.advicedefault"
 msgid "You should use a system that matches your processor's architecture."
 msgstr "Você deve usar um sistema operacional com a mesma arquitetura do seu processador."
 
-#: computerinfo.adviceprocessor64ramenough
+#: localization.adviceprocessor64ramenough
+msgctxt "localization.adviceprocessor64ramenough"
 msgid "Since your computer supports 64-bit operating systems and it has enough RAM (>= 2GB), you should use a 64-bit system."
 msgstr "Como seu computador suporta sistemas operacionais de 64 bits e dispõe de memória RAM suficiente (>= 2GB), você deve usar um sistema de 64 bits."
 
-#: computerinfo.adviceprocessor64ramenoughsystem64
+#: localization.adviceprocessor64ramenoughsystem64
+msgctxt "localization.adviceprocessor64ramenoughsystem64"
 msgid "At the moment, you are using a 64-bit system."
 msgstr "No momento, você está usando um sistema de 64 bits."
 
-#: computerinfo.adviceprocessor64ramlittlesystem32
+#: localization.adviceprocessor64ramlittlesystem32
+msgctxt "localization.adviceprocessor64ramlittlesystem32"
 msgid "Your computer supports 64-bit operating systems, but it does not have much RAM (< 2GB). At the moment, you are using a 32-bit system. If its performance is good, you should use a 32-bit system."
 msgstr "Seu computador suporta sistemas operacionais de 64 bits, mas ele não dispõe de memória RAM suficiente (< 2 GB). No momento, você está usando um sistema de 32 bits. Se o desempenho dele é bom, você deve usar um sistema de 32 bits."
 
-#: computerinfo.adviceprocessor64ramlittlesystem64
+#: localization.adviceprocessor64ramlittlesystem64
+msgctxt "localization.adviceprocessor64ramlittlesystem64"
 msgid "Your computer supports 64-bit operating systems, but it does not have much RAM (< 2GB). At the moment, you are using a 64-bit system. If its performance is not satisfying, you should consider using a 32-bit system."
 msgstr "Seu computador suporta sistemas operacionais de 64 bits, mas ele não dispõe de memória RAM suficiente (< 2 GB). No momento, você está usando um sistema de 64 bits. Se o desempenho dele não é satisfatório, considere usar um sistema de 32 bits."
 
-#: computerinfo.advicesystem32processor32
+#: localization.advicesystem32processor32
+msgctxt "localization.advicesystem32processor32"
 msgid "Your computer supports 32-bit operating systems only."
 msgstr "Seu computador suporta apenas sistemas operacionais de 32 bits."
 
-#: computerinfo.operatingsystemarchitecture32bit
+#: localization.operatingsystemarchitecture32bit
+msgctxt "localization.operatingsystemarchitecture32bit"
 msgid "32-bit"
 msgstr "32 bits"
 
-#: computerinfo.operatingsystemarchitecture64bit
+#: localization.operatingsystemarchitecture64bit
+msgctxt "localization.operatingsystemarchitecture64bit"
 msgid "64-bit"
 msgstr "64 bits"
 
-#: computerinfo.operatingsystemarchitecturebit
-msgctxt "computerinfo.operatingsystemarchitecturebit"
+#: localization.operatingsystemarchitecturebit
+msgctxt "localization.operatingsystemarchitecturebit"
 msgid "-bit"
 msgstr "bits"
 
-#: computerinfo.operatingsystemarchitectureunknown
-msgctxt "computerinfo.operatingsystemarchitectureunknown"
+#: localization.operatingsystemarchitectureunknown
+msgctxt "localization.operatingsystemarchitectureunknown"
 msgid "Unknown"
 msgstr "Não identificada"
 
-#: computerinfo.processorarchitecture32bit
+#: localization.processorarchitecture32bit
+msgctxt "localization.processorarchitecture32bit"
 msgid "Legacy 32-bit PC"
 msgstr "PC de 32 bits (antigo)"
 
-#: computerinfo.processorarchitecture64bit
+#: localization.processorarchitecture64bit
+msgctxt "localization.processorarchitecture64bit"
 msgid "64-bit PC"
 msgstr "PC de 64 bits"
 
-#: computerinfo.processorarchitecturebit
-msgctxt "computerinfo.processorarchitecturebit"
+#: localization.processorarchitecturebit
+msgctxt "localization.processorarchitecturebit"
 msgid "-bit"
 msgstr "bits"
 
-#: computerinfo.processorarchitectureunknown
-msgctxt "computerinfo.processorarchitectureunknown"
+#: localization.processorarchitectureunknown
+msgctxt "localization.processorarchitectureunknown"
 msgid "Unknown"
 msgstr "Não identificada"
 
